- adds landing page - fixes horizontal scroll - adds navbar media queries - moves scrollreveal script to design.handlebars

--- a/design.css
+++ b/design.css
@@ -3,6 +3,53 @@
  */
 
 
+ /* LANDING PAGE */
+
+.landing-page-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 99999;
+    cursor: pointer;
+    transition: opacity 1s;
+}
+
+.landing-logo {
+    display: block;
+    width: 600px;
+    margin: 120px auto 0;
+    animation: fadein 4s;
+}
+
+.tagline {
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.22);
+    text-align: center;
+    margin: 70px auto;
+    font-size: 2em;
+    color : #f4760e;
+}
+
+#pop-culture, #fashionably-late {
+    opacity: 0;
+}
+
+#pop-culture {
+    animation: 3s ease-in 1s 1 normal forwards fadein;
+}
+
+#fashionably-late {
+    animation: 2s ease-in 2.5s 1 normal forwards fadein;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
 .border-top {
     position: fixed;
     top: 0px;
@@ -130,17 +177,18 @@ a:hover {
    overflow: hidden;
 }
 
-
-
 .cubes {
-	float: right;
+    position: relative;
+    z-index: 999999;
+    float: right;
+    cursor: pointer;
 }
 
-
-body,html {
+body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -152,7 +200,7 @@ body {
     font-family: 'Khula', sans-serif;
     font-size: 15px;
     line-height: 1.5;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 /**
@@ -168,6 +216,15 @@ body {
     padding-left: 40px;
     padding-right: 0px;
 }
+
+.site_header, .mobile_site_header {
+    opacity: 0;
+    transition: opacity 2s;
+}
+
+/*.navigation_toggle {
+    background: blue !important;
+}*/
 
 body.vertical_limit .site_header {
     position: fixed;
@@ -212,10 +269,12 @@ body:not(.mobile) .header_text a:hover {
  * Navigation
  * - Contains navigation links and following
  */
+
 .navigation {
+    display: inline-block;
+    position:relative;
+    left: 40%;
     margin-top: -30px;
-    left: 500px;
-    position: relative;
     font-size: 16px;
     line-height: 2;
     z-index: 999;
@@ -1723,6 +1782,7 @@ body.mobile.open .project_nav {
 **/
 body.mobile .container {
     padding-top: 20px;
+    margin-top: -80px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -2007,4 +2067,49 @@ design_options a#randomize:hover {
     left: 0;
     right: 0;
     z-index: -10;
+}
+
+@media only screen and (max-width: 600px) {
+    .landing-logo {
+        width: 320px;
+    }
+
+    .tagline {
+        font-size: 1.7em;
+    }
+}
+
+/*    #site_footer {
+        padding-top: 75px;
+    }*/
+/*    .icon-wrapper {
+        position: static;
+        margin-top: 10px;
+        text-align: left;
+
+    }*/
+@media only screen and (max-width: 480px) {
+    #site_footer {
+        padding-top: 20px;
+        padding-left: 0;
+        padding-bottom: 60px;
+    }
+
+    #address {
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .icon-wrapper {
+        width: 100%;
+        text-align: center;
+        position: static;
+        padding-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 1250px) {
+    .navigation {
+        left: 30%;
+    }
 }
